Specify `scrollbar-gutter: stable` to avoid unnecessary content width changes (#1239)

--- a/src/index.css
+++ b/src/index.css
@@ -165,6 +165,8 @@
 
 :root {
   --ybiq-bg-opacity: 0.5;
+
+  scrollbar-gutter: stable;
 }
 
 .dark {
